# Rust-Web-Programming

./: .gitignore  README.md
Appendix/authenticating_requests/: docker-compose.yml
Appendix/connecting_to_database/src/: main.rs
Chapter01/: error_handling.rs  integers_and_floats.rs  lifetimes.rs  macros.rs  scopes.rs  strings.rs  vectors_and_arrays.rs
Chapter02/building_structs/src/: main.rs
Chapter02/defining_traits/src/: main.rs
Chapter02/json_files/: state.json
Chapter02/managing_structs/src/: main.rs
Chapter02/processing_structs_and_traits/: Cargo.toml
Chapter02/processing_structs_and_traits/src/to_do/structs/traits/: delete.rs
Chapter02/revisiting_traits/: state.json
Chapter02/revisiting_traits/src/: main.rs
Chapter02/web_app/: Cargo.toml
Chapter02/web_app/src/: main.rs
Chapter03/async_functions/: Cargo.toml
Chapter03/basic_async/: Cargo.toml
Chapter03/basic_async/src/: main.rs
Chapter03/basic_setup/src/: main.rs
Chapter03/managing_views/: Cargo.toml
Chapter03/one_page_app/: Cargo.toml
Chapter03/one_page_app/src/: main.rs
Chapter04/basic_setup/: Cargo.toml
Chapter04/passing_parameters/src/: main.rs
Chapter05/displaying_html/: Cargo.toml
Chapter05/displaying_html/src/views/app/: content_loader.rs
Chapter05/displaying_html/src/views/auth/: mod.rs
Chapter05/injecting_css/javascript/: main.js
Chapter05/injecting_css/templates/: main.html
Chapter05/injecting_javascript/: state.json
Chapter06/data_models/: state.json
Chapter06/data_models/src/: main.rs
Chapter06/defining_db/src/: database.rs  schema.rs
Chapter07/Authenticating_users/: Cargo.toml
Chapter07/Authenticating_users/src/: main.rs
Chapter07/intercepting_calls/src/: main.rs  schema.rs
Chapter07/managing_user_sessions/templates/: main.html
Chapter08/caching/src/: schema.rs
Chapter08/caching/templates/: login.html
Chapter08/logging/: Cargo.toml
Chapter08/mapping_our_layers/src/: main.rs
Chapter08/stateless_sessions/src/: main.rs  state.rs
Chapter08/uniform_interface/: Cargo.toml
Chapter08/uniform_interface/javascript/: main.js
Chapter09/unit_testing/javascript/: main.js
Chapter09/unit_testing/src/: main.rs
Chapter10/deploy_to_docker_hub/deploy/: docker-compose.yml
Chapter10/deploy_to_server/deploy/: push_to_dockerhub.sh
Chapter10/persist_on_server/deploy/: docker-compose.yml  push_to_server.sh
Chapter10/persist_on_server/src/: database.rs
Chapter10/run_locally/: Dockerfile
Chapter11/authentication/: Cargo.toml  Rocket.toml
Chapter11/connecting_to_database/: Cargo.toml
Chapter11/passing_data/src/: not_found.rs
chapter12/authenticating_requests/: Cargo.toml
chapter12/authenticating_requests/src/: our_jwt.rs
chapter12/authenticating_requests/src/to_do/structs/: base.rs
chapter12/connecting_to_database/: Cargo.toml
chapter12/passing_parameters/src/: main.rs
chapter_eleven/basic_setup/: Cargo.toml
chapter_eleven/middleware/: .env
chapter_five/injecting_css/: state.json
chapter_four/extracting_data/: state.json
chapter_four/json_serialization/: Cargo.toml
chapter_four/passing_parameters/: state.json
chapter_nine/postman_testing/: to_do_items.postman_collection.json
chapter_nine/unit_testing/: Cargo.toml
chapter_one/: hash_maps.rs  structs.rs  traits.rs
chapter_seven/creating_user_models/: Cargo.toml
chapter_seven/creating_user_models/src/json_serialization/: mod.rs
chapter_seven/creating_user_models/src/views/: mod.rs
chapter_seven/creating_user_models/src/views/to_do/: get.rs  mod.rs
chapter_seven/intercepting_calls/: Cargo.toml
chapter_seven/intercepting_calls/javascript/: main.js
chapter_seven/intercepting_calls/src/: processes.rs
chapter_seven/intercepting_calls/src/models/item/: item.rs
chapter_seven/intercepting_calls/src/views/to_do/: create.rs
chapter_six/data_models/: Cargo.toml
chapter_ten/deploy_to_server/: Dockerfile
chapter_ten/run_locally/: .env  Cargo.toml
chapter_three/basic_setup/: Cargo.toml
chapter_three/multiple_servers/: Cargo.toml
chapter_twelve/connecting_to_database/: Cargo.toml
chapter_twelve/connecting_to_database/src/: main.rs
chapter_twelve/connecting_to_database/src/to_do/structs/traits/: edit.rs
chapter_twelve/warp_server/: Cargo.toml
chapter_two/processing_structs_and_traits/: state.json
chapter_two/revisiting_traits/: state.json
(+162 files in other folders)
