[package]
name = "managing_views"
version = "0.1.0"
authors = ["Maxwell Flitton <maxwellflitton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
futures = "0.3.5"
serde = "1"
actix-service = "1.0.6"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
actix-router = "0.2.5"
thiserror = "1.0.21"
actix-http = "2.0.0"
